Changelog
=========

1.1 (unreleased)
----------------



1.0 (2009-11-11)
----------------

* No longer artificially restrict to z3c.form <2.0, as that is a deployment
  decision.  Plone 3 users may need to pin z3c.form to version 1.9.0 or add
  additional fake eggs to avoid pulling in new zope.* packages.
  [davisagli]

* Only depend on plone.app.jquerytools, not Products.pipbox.
  [davisagli]

* Fixed issue with loading thank you page text when revisiting the wizard.
  [davisagli]

1.0rc1 (2009-8-26)
------------------

* Added options for configuring the thank you page message or an alternative
  thank you page URL.
  [davisagli]

* Fixed portlet link to view saved letters.
  [davisagli]

* Decode request variables before using them in dollarString substitutions,
  to avoid UnicodeDecodeErrors when casting the strings for interpolation.
  [davisagli]

* Decode UTF-8 values from Archetypes before passing them to z3c.form, to
  avoid UnicodeDecodeErrors when the system default encoding is ASCII.
  [davisagli]

* Check the persistent template setting in the formgen_tool when determining
  whether to update the mailer templates, rather than the default
  default from PFG's config.py
  [davisagli]

* Fixed issue with marshalling field size.
  [davisagli]

* Fixed action adapter processing on the final send step when a CAPTCHA field
  is in use.
  [davisagli]

1.0a1 (2009-06-25)
------------------

* Initial release.